finish integration tests