@@ -6,12 +6,9 @@ import com.hotelmanager.model.Booking;
 import com.hotelmanager.model.Hotel;
 import com.hotelmanager.model.Room;
 import com.hotelmanager.model.RoomType;
-import com.hotelmanager.parser.AvailabilityCommandParser;
-import com.hotelmanager.parser.SearchCommandParser;
-import com.hotelmanager.service.*;
-import jakarta.validation.Validation;
+import com.hotelmanager.service.AvailabilityService;
+import com.hotelmanager.service.CommandProcessor;
 import jakarta.validation.Validator;
-import jakarta.validation.ValidatorFactory;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -19,7 +16,6 @@ import org.junit.jupiter.api.io.TempDir;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.InputStream;
 import java.io.PrintStream;
 import java.nio.file.Path;
 import java.time.LocalDate;
@@ -32,152 +28,176 @@ import static org.assertj.core.api.Assertions.assertThat;
 class HotelBookingIntegrationTest {
 
     private HotelBookingApplication application;
-    private ByteArrayOutputStream outputStream;
-    private PrintStream originalOut;
-    private InputStream originalIn;
     private ObjectMapper objectMapper;
+    private ByteArrayOutputStream outputStream;
+    private ByteArrayOutputStream errorStream;
 
-    private static CommandProcessor getCommandProcessor(ValidatorFactory factory, AvailabilityService availabilityService) {
-        Validator validator = factory.getValidator();
-        RequestValidationService requestValidationService = new RequestValidationService(validator);
+    private static CommandProcessor getCommandProcessor(Validator validator, AvailabilityService availabilityService) {
+        var requestValidationService = new com.hotelmanager.service.RequestValidationService(validator);
 
-        // Command processing layer - Now parsers need validation service
-        AvailabilityCommandParser availabilityParser = new AvailabilityCommandParser(requestValidationService);
-        SearchCommandParser searchParser = new SearchCommandParser(requestValidationService);
-        ResponseFormatter responseFormatter = new ResponseFormatter();
+        var availabilityParser = new com.hotelmanager.parser.AvailabilityCommandParser(requestValidationService);
+        var searchParser = new com.hotelmanager.parser.SearchCommandParser(requestValidationService);
+        var responseFormatter = new com.hotelmanager.service.ResponseFormatter();
+
         return new CommandProcessor(
-                availabilityParser,
-                searchParser,
-                availabilityService,
-                responseFormatter
-        );
+                availabilityParser, searchParser, availabilityService, responseFormatter);
     }
 
     @BeforeEach
     void setUp() {
-        objectMapper = new ObjectMapper()
-                .registerModule(new JavaTimeModule());
+        objectMapper = new ObjectMapper().registerModule(new JavaTimeModule());
+        application = createApplication();
 
-        // Data layer
-        HotelDataService hotelDataService = new HotelDataService(objectMapper);
-
-        // Service layer
-        AvailabilityCalculator availabilityCalculator = new AvailabilityCalculator(hotelDataService);
-        ValidationService validationService = new ValidationService(hotelDataService);
-        AvailabilityService availabilityService = new AvailabilityService(validationService, availabilityCalculator);
-
-        // Validation layer - Create validator manually since we're not using Spring context
-        ValidatorFactory factory = Validation.buildDefaultValidatorFactory();
-        CommandProcessor commandProcessor = getCommandProcessor(factory, availabilityService);
-
-        // Console layer
-        ConsoleOutputService consoleOutputService = new ConsoleOutputService();
-        HotelBookingService hotelBookingService = new HotelBookingService(commandProcessor, consoleOutputService);
-
-        // Application
-        application = new HotelBookingApplication(hotelDataService, hotelBookingService, consoleOutputService);
-
-        // Setup output capture
-        originalOut = System.out;
+        // Capture outputs
         outputStream = new ByteArrayOutputStream();
+        errorStream = new ByteArrayOutputStream();
         System.setOut(new PrintStream(outputStream));
-
-        // Capture System.in
-        originalIn = System.in;
+        System.setErr(new PrintStream(errorStream));
     }
 
     @AfterEach
     void tearDown() {
-        // Restore original streams
-        System.setOut(originalOut);
-        System.setIn(originalIn);
+        System.setOut(System.out);
+        System.setErr(System.err);
     }
 
     @Test
-    void testCommandLineApplication(@TempDir Path tempDir) throws Exception {
-        // Create test data objects
+    void testAvailabilityCommands(@TempDir Path tempDir) throws Exception {
+        // Setup data
         Hotel hotel = createTestHotel();
         List<Booking> bookings = createTestBookings();
 
-        // Write objects to files using ObjectMapper
-        Path hotelsFile = tempDir.resolve("hotels.json");
-        Path bookingsFile = tempDir.resolve("bookings.json");
+        // Write to files
+        Path hotelFile = tempDir.resolve("hotels.json");
+        Path bookingFile = tempDir.resolve("bookings.json");
+        objectMapper.writeValue(hotelFile.toFile(), List.of(hotel));
+        objectMapper.writeValue(bookingFile.toFile(), bookings);
 
-        objectMapper.writeValue(hotelsFile.toFile(), List.of(hotel));
-        objectMapper.writeValue(bookingsFile.toFile(), bookings);
+        // Execute
+        String input = "Availability(H1, 20240901, SGL)\n\n";
+        System.setIn(new ByteArrayInputStream(input.getBytes()));
 
-        // Set up input commands
-        String commands = """
-                Availability(H1, 20240901, SGL)
-                Availability(H1, 20240901-20240903, DBL)
-                
-                """;
-        System.setIn(new ByteArrayInputStream(commands.getBytes()));
+        boolean success = application.executeApplication("--hotels", hotelFile.toString(),
+                "--bookings", bookingFile.toString());
 
-        // Execute application
-        String[] args = {"--hotels", hotelsFile.toString(), "--bookings", bookingsFile.toString()};
-        boolean success = application.executeApplication(args);
+        // Verify
+        assertThat(success).isTrue();
+        assertThat(outputStream.toString()).contains("Available Rooms: 2");
+    }
 
-        // Verify output
+    @Test
+    void testSearchCommand(@TempDir Path tempDir) throws Exception {
+        // Setup data
+        Hotel hotel = createTestHotel();
+        LocalDate today = LocalDate.now();
+        List<Booking> bookings = List.of(
+                new Booking("H1", "SGL", "Standard",
+                        today.plusDays(1),
+                        today.plusDays(3))  // Blocks 1 room for days 1-2
+        );
+
+        // Write to files
+        Path hotelFile = tempDir.resolve("hotels.json");
+        Path bookingFile = tempDir.resolve("bookings.json");
+        objectMapper.writeValue(hotelFile.toFile(), List.of(hotel));
+        objectMapper.writeValue(bookingFile.toFile(), bookings);
+
+        // Execute
+        String input = "Search(H1, 5, SGL)\n\n";
+        System.setIn(new ByteArrayInputStream(input.getBytes()));
+
+        boolean success = application.executeApplication("--hotels", hotelFile.toString(),
+                "--bookings", bookingFile.toString());
+
+        // Verify
         assertThat(success).isTrue();
         String output = outputStream.toString();
-        assertThat(output).contains("Hotel: H1, Room Type: SGL, Date Range: 20240901, Available Rooms: 2");
-        assertThat(output).contains("Hotel: H1, Room Type: DBL, Date Range: 20240901-20240903, Available Rooms: 1");
+
+        // Expected availability:
+        // Today: 2 rooms available
+        // Days 1-2: 1 room available (1 booked)
+        // Days 3-4: 2 rooms available
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
+
+        String expectedRange1 = String.format("(%s-%s, 2)",
+                today.format(formatter),
+                today.format(formatter));
+
+        String expectedRange2 = String.format("(%s-%s, 1)",
+                today.plusDays(1).format(formatter),
+                today.plusDays(2).format(formatter));
+
+        String expectedRange3 = String.format("(%s-%s, 2)",
+                today.plusDays(3).format(formatter),
+                today.plusDays(4).format(formatter));
+
+        assertThat(output).contains(expectedRange1);
+        assertThat(output).contains(expectedRange2);
+        assertThat(output).contains(expectedRange3);
+    }
+
+    @Test
+    void testInvalidCommands(@TempDir Path tempDir) throws Exception {
+        // Setup data
+        Hotel hotel = createTestHotel();
+        List<Booking> bookings = createTestBookings();
+
+        // Write to files
+        Path hotelFile = tempDir.resolve("hotels.json");
+        Path bookingFile = tempDir.resolve("bookings.json");
+        objectMapper.writeValue(hotelFile.toFile(), List.of(hotel));
+        objectMapper.writeValue(bookingFile.toFile(), bookings);
+
+        // Execute
+        String input = "InvalidCommand\n\n";
+        System.setIn(new ByteArrayInputStream(input.getBytes()));
+
+        boolean success = application.executeApplication("--hotels", hotelFile.toString(),
+                "--bookings", bookingFile.toString());
+
+        // Verify
+        assertThat(success).isTrue();
+        assertThat(errorStream.toString()).contains("Error");
     }
 
     private Hotel createTestHotel() {
         Hotel hotel = new Hotel();
         hotel.setId("H1");
         hotel.setName("Hotel California");
-
-        // Create room types
-        RoomType singleRoom = new RoomType(
-                "SGL",
-                "Single Room",
-                List.of("WiFi", "TV"),
-                List.of("Non-smoking")
-        );
-
-        RoomType doubleRoom = new RoomType(
-                "DBL",
-                "Double Room",
-                List.of("WiFi", "TV", "Minibar"),
-                List.of("Non-smoking", "Sea View")
-        );
-
-        hotel.setRoomTypes(Arrays.asList(singleRoom, doubleRoom));
-
-        // Create rooms
-        List<Room> rooms = Arrays.asList(
+        hotel.setRoomTypes(Arrays.asList(
+                new RoomType("SGL", "Single Room", List.of("WiFi", "TV"), List.of("Non-smoking")),
+                new RoomType("DBL", "Double Room", List.of("WiFi", "TV", "Minibar"), List.of("Non-smoking", "Sea View"))
+        ));
+        hotel.setRooms(Arrays.asList(
                 new Room("SGL", "101"),
                 new Room("SGL", "102"),
                 new Room("DBL", "201"),
                 new Room("DBL", "202")
-        );
-
-        hotel.setRooms(rooms);
+        ));
         return hotel;
     }
 
     private List<Booking> createTestBookings() {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
-
-        Booking booking1 = new Booking(
-                "H1",
-                "DBL",
-                "Prepaid",
-                LocalDate.parse("20240901", formatter),
-                LocalDate.parse("20240903", formatter)
+        return List.of(
+                new Booking("H1", "DBL", "Prepaid",
+                        LocalDate.parse("20240901", formatter),
+                        LocalDate.parse("20240903", formatter))
         );
+    }
 
-        Booking booking2 = new Booking(
-                "H1",
-                "SGL",
-                "Standard",
-                LocalDate.parse("20240902", formatter),
-                LocalDate.parse("20240905", formatter)
-        );
+    private HotelBookingApplication createApplication() {
+        var dataService = new com.hotelmanager.service.HotelDataService(objectMapper);
+        var availabilityCalculator = new com.hotelmanager.service.AvailabilityCalculator(dataService);
+        var validationService = new com.hotelmanager.service.ValidationService(dataService);
+        var availabilityService = new com.hotelmanager.service.AvailabilityService(validationService, availabilityCalculator);
 
-        return Arrays.asList(booking1, booking2);
+        var validator = jakarta.validation.Validation.buildDefaultValidatorFactory().getValidator();
+        var commandProcessor = getCommandProcessor(validator, availabilityService);
+
+        var consoleOutputService = new com.hotelmanager.service.ConsoleOutputService();
+        var hotelBookingService = new com.hotelmanager.service.HotelBookingService(commandProcessor, consoleOutputService);
+
+        return new HotelBookingApplication(dataService, hotelBookingService, consoleOutputService);
     }
 }
